init for Mach1Encode nodejs setup and example

--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "mach1spatial-Encode",
   "version": "1.0.0",
   "description": "Mach1 Spatial NodeJS module for Mach1Encode API",
-  "main": "m1EncodeFunctions.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "./node_modules/.bin/eslint ./src",
+    "example": "node --experimental-import-meta-resolve -r esm ./configs/browser-sync.js",
+    "start": "npm run example",
+    "test": "npm run lint"
   },
   "repository": {
     "type": "git",
@@ -23,5 +26,31 @@
   "bugs": {
     "url": "https://github.com/Mach1Studios/NodeJS-Mach1Encode/issues"
   },
-  "homepage": "https://github.com/Mach1Studios/NodeJS-Mach1Encode#readme"
+  "homepage": "https://github.com/Mach1Studios/NodeJS-Mach1Encode#readme",
+  "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/eslint-parser": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.14.5",
+    "@babel/preset-env": "^7.14.5",
+    "@babel/runtime": "^7.14.5",
+    "babel-loader": "^8.2.2",
+    "browser-sync": "^2.26.14",
+    "eslint": "^7.28.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.4",
+    "esm": "^3.2.25",
+    "portscanner": "^2.2.0"
+  },
+  "dependencies": {
+    "@david18284/one-euro-filter": "^1.0.2",
+    "@tensorflow-models/face-landmarks-detection": "0.0.3",
+    "@tensorflow/tfjs": "^3.7.0",
+    "core-js": "^3.14.0",
+    "os-browserify": "^0.3.0",
+    "osc-js": "^2.1.2",
+    "path-browserify": "^1.0.1",
+    "regenerator-runtime": "^0.13.7",
+    "stats.js": "^0.17.0",
+    "three": "^0.129.0"
+  }
 }
